--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-	"name": "use-dynamodb-stats",
+	"name": "use-dynamodb-metrics",
 	"dependencies": {
 		"lodash": "^4.17.21",
 		"use-dynamodb": "^1.0.59",
+		"use-zod-default": "^1.0.8",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.17.14",
 		"@types/node": "^22.10.10",
-		"@vitest/coverage-v8": "2.1.8",
+		"@vitest/coverage-v8": "^2.1.8",
 		"prettier": "^3.4.2",
 		"typescript": "^5.7.3",
 		"vitest": "^2.1.8"
@@ -20,7 +21,7 @@
 	"main": "dist/index.js",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/feliperohdee/use-dynamodb-stats"
+		"url": "https://github.com/feliperohdee/use-dynamodb-metrics"
 	},
 	"scripts": {
 		"build": "rm -rf dist && tsc -p tsconfig.json",
