--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "use-dynamodb-metrics",
 	"dependencies": {
 		"lodash": "^4.17.21",
-		"use-dynamodb": "^1.0.66",
+		"use-dynamodb": "^1.0.67",
 		"use-zod-default": "^1.0.10",
 		"zod": "^3.24.1"
 	},
@@ -10,8 +10,10 @@
 		"@types/lodash": "^4.17.14",
 		"@types/node": "^22.10.10",
 		"@vitest/coverage-v8": "^2.1.8",
+		"eslint": "^9.26.0",
 		"prettier": "^3.4.2",
 		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.32.0",
 		"vitest": "^2.1.8"
 	},
 	"files": [
@@ -25,11 +27,12 @@
 	},
 	"scripts": {
 		"build": "rm -rf dist && tsc -p tsconfig.json",
-		"lint": "prettier --write . && tsc -p tsconfig.json",
+		"dev:dynamodb": "java -jar /Users/feliperohde/Documents/dynamodb-local/DynamoDBLocal.jar -dbPath ./dynamodb-local -sharedDb",
+		"lint": "prettier --write . && eslint --fix . && tsc -p tsconfig.json",
 		"npm-publish": "yarn test --run && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
 		"npm-publish-only": "yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
 		"test": "./.test.sh",
 		"test:coverage": "rm -rf coverage && ./.test.sh --run --coverage"
 	},
-	"version": "1.0.4"
+	"version": "1.0.5"
 }
