--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
 	"name": "use-dynamodb-metrics",
-	"dependencies": {
-		"lodash": "^4.17.21",
-		"use-dynamodb": "^1.0.70",
-		"use-zod-default": "^1.0.15",
-		"zod": "^3.25.67"
-	},
 	"devDependencies": {
 		"@types/lodash": "^4.17.18",
 		"@types/node": "^22.10.10",
 		"@vitest/coverage-v8": "^2.1.8",
 		"eslint": "^9.26.0",
+		"lodash": "^4.17.21",
 		"prettier": "^3.4.2",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.32.0",
-		"vitest": "^2.1.8"
+		"use-dynamodb": "^1.0.70",
+		"use-zod-default": "^1.0.18",
+		"vitest": "^2.1.8",
+		"zod": "^4.0.17"
+	},
+	"peerDependencies": {
+		"lodash": "^4.17.21",
+		"use-dynamodb": "^1.0.70",
+		"use-zod-default": "^1.0.18",
+		"zod": "^4.0.17"
 	},
 	"files": [
 		"dist"
@@ -29,10 +33,9 @@
 		"build": "rm -rf dist && yarn lint && tsc -p tsconfig.json",
 		"dev:dynamodb": "java -jar /Users/feliperohde/Documents/dynamodb-local/DynamoDBLocal.jar -dbPath ./dynamodb-local -sharedDb",
 		"lint": "prettier --write . && eslint --fix . && tsc -p tsconfig.json",
-		"npm-publish": "yarn test --run && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
-		"npm-publish-only": "yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
+		"npm:publish": "yarn test --run && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
 		"test": "./.test.sh",
 		"test:coverage": "rm -rf coverage && ./.test.sh --run --coverage"
 	},
-	"version": "1.0.13"
+	"version": "1.0.14"
 }
