--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
 	"name": "use-dynamodb-metrics",
 	"devDependencies": {
+		"@aws-sdk/client-dynamodb": "^3.868.0",
+		"@aws-sdk/lib-dynamodb": "^3.868.0",
 		"@types/lodash": "^4.17.18",
 		"@types/node": "^22.10.10",
-		"@vitest/coverage-v8": "^2.1.8",
+		"@vitest/coverage-v8": "^3.2.4",
 		"eslint": "^9.26.0",
 		"lodash": "^4.17.21",
 		"prettier": "^3.4.2",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.32.0",
-		"use-dynamodb": "^1.0.71",
-		"use-zod-default": "^1.0.18",
-		"vitest": "^2.1.8",
+		"use-async-helpers": "^1.0.31",
+		"use-dynamodb": "^1.0.72",
+		"use-zod-default": "^1.0.21",
+		"vitest": "^3.2.4",
 		"zod": "^4.0.17"
 	},
 	"peerDependencies": {
@@ -19,8 +22,8 @@
 		"@aws-sdk/lib-dynamodb": "^3.868.0",
 		"lodash": "^4.17.21",
 		"use-async-helpers": "^1.0.31",
-		"use-dynamodb": "^1.0.70",
-		"use-zod-default": "^1.0.18",
+		"use-dynamodb": "^1.0.72",
+		"use-zod-default": "^1.0.21",
 		"zod": "^4.0.17"
 	},
 	"files": [
@@ -36,9 +39,10 @@
 		"build": "rm -rf dist && yarn lint && tsc -p tsconfig.json",
 		"dev:dynamodb": "java -jar /Users/feliperohde/Documents/dynamodb-local/DynamoDBLocal.jar -dbPath ./dynamodb-local -sharedDb",
 		"lint": "prettier --write . && eslint --fix . && tsc -p tsconfig.json",
-		"npm:publish": "yarn test --run && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
-		"test": "./.test.sh",
-		"test:coverage": "rm -rf coverage && ./.test.sh --run --coverage"
+		"npm:publish": "yarn test && yarn build && yarn version --patch --no-git-tag-version && yarn publish --non-interactive",
+		"test": "yarn vitest --fileParallelism=false --run",
+		"test:coverage": "rm -rf coverage && yarn vitest --fileParallelism=false --coverage --run",
+		"test:watch": "yarn vitest --fileParallelism=false"
 	},
-	"version": "1.0.15"
+	"version": "1.0.16"
 }
